# RTTI

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_project_database.sh  compile_commands.json
benchmark/: run.cpp
include/: Button.h  Object.h  ObjectList.h  RenderPolicy.h  Renderer.h  TextLabel.h
src/: Button.cpp  Object.cpp  ObjectList.cpp  Renderer.cpp  TextLabel.cpp  main.cpp  stdafx.h
